gcc/testsuite/gdc.test/compilable/ice9663.d
// REQUIRED_ARGS: -wi

void main()
{
    int[1] a;
    int[] b = [1];

    a = 1;

    b[] = a;

    b = a;
}
